[tool.poetry]
name = "raquel"
version = "0.2.7"
description = "Simple Job Queues using SQL"
authors = ["vduseev <vagiz@duseev.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["job", "queue", "task", "worker", "sql", "postgresql"]
homepage = "https://github.com/vduseev/raquel"
repository = "https://github.com/vduseev/raquel"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0"
greenlet = { version = "^3.1", optional = true }

[tool.poetry.extras]
asyncio = ["greenlet"]

[tool.poetry.group.docs.dependencies]
sphinx = "^8.0.2"
sphinx-material = "^0.0.36"
sphinxcontrib-programoutput = "^0.17"

[tool.poetry.group.test.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
psycopg2 = "^2.9"
asyncpg = "^0.30"
mysql-connector-python = "^9.0"
pymssql = "^2.3"
oracledb = "^2.4"
pytest-asyncio = "^0.24"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["raquel"]
omit = ["raquel/dbapi_types.py"]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if self\\.debug",
    "if settings\\.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "raise RuntimeError",
    "raise ValueError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "tests",
]

line-length = 79
indent-width = 4
target-version = "py312"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = 79

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

[tool.ruff.lint.pydocstyle]
convention = "google"
